--- a/app/views/welcome/shared/_footer.html.erb
+++ b/app/views/welcome/shared/_footer.html.erb
@@ -38,7 +38,7 @@
       <div class="col-md-12">
         <p class="copyright-text">Copyright &copy; <a href="/">ByeBuying</a> 2016. Designed my <a href="http://www.mysolutions4u.in/" target="_blank">MySolution4U.in</a>. All rights reserved
         <!--<p class="copyright-text">Copyright &copy; <a href="/">Barter</a> 2016. Designed my <a href="http://www.mysolutions4u.in/" target="_blank">MySolution4U.in</a>. All rights reserved-->
-          <a href="/terms_condition">terms & Condition</a>  | <a href="/privacy_policy">Privacy Policy</a></p>
+          <a href="/terms_condition">Terms & Condition</a>  | <a href="/privacy_policy">Privacy Policy</a></p>
       </div>
       <!--<div class="col-md-6">-->
         <!--<ul class="payment-icons-list">-->
