--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -51,6 +51,7 @@
       <h3 class="widget-title">Login</h3>
       <p>Welcome, Login to get started</p>
       <hr />
+      <span class='msg-already-registred' style="color:red">Number already registered.</span>
       <span style="color:red" class=" login-error hidden"></span>
       <div class="form-group">
         Contact: <input type="number" class="form-control rgr-frm-mumber">
@@ -235,6 +236,7 @@
 <script type="text/javascript" charset="utf-8">
 
     $( document ).ready(function() {
+        $('.msg-already-registred').hide();
         $(".mobile-submit").click(function(){
             var number = $("#register-mobile").val();
             $.post('customer/step_two.json', {phone: number})
@@ -248,6 +250,9 @@
                     .fail(function(xhr, status, error) {
                         // error handling
                         if (xhr.responseJSON.errors.indexOf("Already") >= 0){
+                            var phone = $('#register-mobile').val();
+                            $(".rgr-frm-mumber").val(phone);
+                            $('.msg-already-registred').show();
                             $(".login-nav-button").trigger( "click" );
                         }
                     });
@@ -298,14 +303,16 @@
             $.post('customer/sign_in', {contact: phone, password: pwd })
                     .done(function(msg){
                         location.reload();
-                        $(".login-error").addClass('hidden')
+                        $(".login-error").addClass('hidden');
+                        $('.msg-already-registred').hide();
 //                        do nothing
                     })
                     .fail(function(xhr, status, error) {
                         // error handling
                         var error_text = xhr.responseText.split(':')[1].replace('"','').replace('}','').replace('"','');
                         $(".login-error").text(error_text);
-                        $(".login-error").removeClass('hidden')
+                        $(".login-error").removeClass('hidden');
+                        $('.msg-already-registred').hide();
                     });
 
         });
