--- a/app/views/layouts/default.html.erb
+++ b/app/views/layouts/default.html.erb
@@ -6,6 +6,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <script src='https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCA6tz5qy6wDGGw7Jp4DOYplCRNtSqZk4s'></script>
   <%= csrf_meta_tags %>
 </head>
 <body>
