--- a/app/views/customer/advertisement_images/_form.html.erb
+++ b/app/views/customer/advertisement_images/_form.html.erb
@@ -1,4 +1,4 @@
 <%= simple_form_for [:customer, advertisement, advertisement_image] do |f| %>
     <%= f.input :image %>
-    <%= f.submit 'Save', class: 'btn btn-primary' %>
+    <%= f.submit 'Save', class: 'btn btn-primary advertisement-image-save' %>
 <% end %>
