--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -102,7 +102,7 @@
                 <td>Start from: <%= @product.start_at.strftime(time_format) %></td>
               </tr>
               <tr>
-                <td>End at: <%= @product.end_at.strftime(time_format) %></td>
+                <td>End from: <%= @product.end_at.strftime(time_format) %></td>
               </tr>
               <tr>
                 <td>Quantity: <%= @product.quantity %></td>
