--- a/app/views/customer/advertisements/show.html.erb
+++ b/app/views/customer/advertisements/show.html.erb
@@ -74,3 +74,14 @@
   </div>
 </div>
 
+
+<script type="text/javascript" charset="utf-8">
+    $('.advertisement-image-save').hide();
+
+    $('#advertisement_image_image').change(function(){
+        if ($("#advertisement_image_image").val().length > 0){
+            $('.advertisement-image-save').show();
+        }
+    });
+</script>
+
