--- a/app/views/customer/service_images/_form.html.erb
+++ b/app/views/customer/service_images/_form.html.erb
@@ -1,4 +1,4 @@
 <%= simple_form_for [:customer, service, service_image] do |f| %>
     <%= f.input :image %>
-    <%= f.submit 'Save', class: 'btn btn-primary' %>
+    <%= f.submit 'Save', class: 'btn btn-primary service-image-save' %>
 <% end %>
