--- a/app/views/welcome/contact_us.html.erb
+++ b/app/views/welcome/contact_us.html.erb
@@ -75,7 +75,7 @@
                     map: map,position: new google.maps.LatLng(28.4138045,77.32239149999998)
                 });
                 infowindow = new google.maps.InfoWindow({
-                    content:'<strong>ByeBuying</strong><br>Shop no. 31, New Sabzi Mandi, Sector 16, Faridabad<br>'
+                    content:'<strong>ByeBuying</strong><br>Faridabad<br>'
                 });
                 google.maps.event.addListener(marker, 'click', function(){
                     infowindow.open(map,marker);
