--- a/app/views/customer/advertisements/show.html.erb
+++ b/app/views/customer/advertisements/show.html.erb
@@ -2,10 +2,16 @@
   <div class="row">
     <div class="white-bg">
       <div class="col-sm-6">
-        <div class="col-xs-12">
+        <div class="col-xs-6">
           <div class="product-detail">
             <h4>Title:</h4>
             <p><%= @advertisement.title%></p>
+          </div>
+        </div>
+        <div class="col-xs-6">
+          <div class="product-detail">
+            <h4>Status:</h4>
+            <p><%= @advertisement.admin_verified? ? 'Approved' : 'Pending'%></p>
           </div>
         </div>
         <div class="col-xs-12">
