--- a/app/views/customer/products/show.html.erb
+++ b/app/views/customer/products/show.html.erb
@@ -2,10 +2,16 @@
   <div class="row">
     <div class="white-bg">
       <div class="col-sm-6 col-xs-12">
-        <div class="col-xs-12">
+        <div class="col-xs-6">
           <div class="product-detail">
             <h4>Name:</h4>
             <p><%= @product.name %></p>
+          </div>
+        </div>
+        <div class="col-xs-6">
+          <div class="product-detail">
+            <h4>Status:</h4>
+            <p><%= @product.admin_verified? ? 'Approved' : 'Pending' %></p>
           </div>
         </div>
         <div class="col-xs-12">
