--- a/app/views/customer/services/show.html.erb
+++ b/app/views/customer/services/show.html.erb
@@ -2,10 +2,16 @@
   <div class="row">
     <div class="white-bg">
       <div class="col-sm-6">
-        <div class="col-sm-12">
+        <div class="col-sm-6">
           <div class="product-detail">
             <h4>Category:</h4>
             <p><%= @service.subcategory.category.name %></p>
+          </div>
+        </div>
+        <div class="col-xs-6">
+          <div class="product-detail">
+            <h4>Status:</h4>
+            <p><%= @service.admin_verified? ? 'Approved' : 'Pending' %></p>
           </div>
         </div>
         <div class="col-sm-12">
