changes in website

--- a/app/views/welcome/contact_us.html.erb
+++ b/app/views/welcome/contact_us.html.erb
@@ -35,7 +35,7 @@
           <%= text_area_tag :message, '',class: 'form-control' %>
           <!--<textarea class="form-control"></textarea>-->
         </div>
-          <%= submit_tag 'Save', class: 'btn btn-primary' %>
+          <%= submit_tag 'Save', class: 'btn btn-primary', style: 'width: 100%' %>
         <!--<input class="btn btn-primary" type="submit" value="Send a Message" />-->
         <% end %>
       <!--</form>-->
