--- a/app/views/welcome/privacy_policy.html.erb
+++ b/app/views/welcome/privacy_policy.html.erb
@@ -4,9 +4,9 @@
   </header>
   <div class="row">
     <div class="col-xs-12">
-      <p class="lead">THIS PRIVACY POLICY (“PRIVACY POLICY “) IS AN ELECTRONIC RECORD IN THE FORM OF AN ELECTRONIC CONTRACT FORMED UNDER INFORMATION TECHNOLOGY ACT, 2000 AND RULES MADE THEREUNDER AND THE AMENDED PROVISIONS PERTAINING TO ELECTRONIC DOCUMENTS / RECORDS IN VARIOUS STATUTES AS AMENDED BY THE INFORMATION TECHNOLOGY ACT, 2000. THE PRIVACY POLICY DOES NOT REQUIRE ANY PHYSICAL, ELECTRONIC OR DIGITAL SIGNATURE.</p>
-      <p class="lead">THE PRIVACY POLICY IS A LEGALLY BINDING DOCUMENT BETWEEN USER AND BYEBUYING (BOTH TERMS DEFINED BELOW). THE PRIVACY POLICY WILL BE EFFECTIVE UPON YOUR ACCEPTANCE OF THE SAME (DIRECTLY OR INDIRECTLY IN ELECTRONIC FORM OR BY MEANS OF AN ELECTRONIC RECORD) AND WILL GOVERN THE RELATIONSHIP BETWEEN USER AND BYEBUYING FOR THE USE OF THE WEBSITE (DEFINED BELOW).</p>
-      <p class="lead">PLEASE READ THIS PRIVACY POLICY CAREFULLY. BY USING THE WEBSITE, YOU INDICATE THAT YOU UNDERSTAND, AGREE AND CONSENT TO THIS PRIVACY POLICY. IF YOU DO NOT AGREE WITH THE TERMS OF THIS PRIVACY POLICY, PLEASE DO NOT USE THIS WEBSITE. </p>
+      <p>THIS PRIVACY POLICY (“PRIVACY POLICY “) IS AN ELECTRONIC RECORD IN THE FORM OF AN ELECTRONIC CONTRACT FORMED UNDER INFORMATION TECHNOLOGY ACT, 2000 AND RULES MADE THEREUNDER AND THE AMENDED PROVISIONS PERTAINING TO ELECTRONIC DOCUMENTS / RECORDS IN VARIOUS STATUTES AS AMENDED BY THE INFORMATION TECHNOLOGY ACT, 2000. THE PRIVACY POLICY DOES NOT REQUIRE ANY PHYSICAL, ELECTRONIC OR DIGITAL SIGNATURE.</p>
+      <p>THE PRIVACY POLICY IS A LEGALLY BINDING DOCUMENT BETWEEN USER AND BYEBUYING (BOTH TERMS DEFINED BELOW). THE PRIVACY POLICY WILL BE EFFECTIVE UPON YOUR ACCEPTANCE OF THE SAME (DIRECTLY OR INDIRECTLY IN ELECTRONIC FORM OR BY MEANS OF AN ELECTRONIC RECORD) AND WILL GOVERN THE RELATIONSHIP BETWEEN USER AND BYEBUYING FOR THE USE OF THE WEBSITE (DEFINED BELOW).</p>
+      <p>PLEASE READ THIS PRIVACY POLICY CAREFULLY. BY USING THE WEBSITE, YOU INDICATE THAT YOU UNDERSTAND, AGREE AND CONSENT TO THIS PRIVACY POLICY. IF YOU DO NOT AGREE WITH THE TERMS OF THIS PRIVACY POLICY, PLEASE DO NOT USE THIS WEBSITE. </p>
     </div>
   </div>
   <div class="gap gap-small"></div>
