--- a/app/views/welcome/terms_condition.html.erb
+++ b/app/views/welcome/terms_condition.html.erb
@@ -4,9 +4,9 @@
   </header>
   <div class="row">
     <div class="col-xs-12">
-      <p class="lead">THIS TERMS OF USE   (“TERMS OF USE”) IS AN ELECTRONIC RECORD IN THE FORM OF AN ELECTRONIC CONTRACT FORMED UNDER INFORMATION TECHNOLOGY ACT, 2000 AND RULES MADE THEREUNDER AND THE AMENDED PROVISIONS PERTAINING TO ELECTRONIC DOCUMENTS / RECORDS IN VARIOUS STATUTES AS AMENDED BY THE INFORMATION TECHNOLOGY ACT, 2000. THE TERMS OF USE DOES NOT REQUIRE ANY PHYSICAL, ELECTRONIC OR DIGITAL SIGNATURE.</p>
-      <p class="lead">THE TERMS OF USE  IS A LEGALLY BINDING DOCUMENT BETWEEN USER AND BYEBUYING  (BOTH TERMS DEFINED BELOW). THE TERMS OF USE WILL BE EFFECTIVE UPON YOUR ACCEPTANCE OF THE SAME (DIRECTLY OR INDIRECTLY IN ELECTRONIC FORM OR BY MEANS OF AN ELECTRONIC RECORD) AND WILL GOVERN THE RELATIONSHIP BETWEEN USER AND BYEBUYING FOR THE USE OF THE WEBSITE (DEFINED BELOW).</p>
-      <p class="lead">PLEASE READ THIS TERMS OF USE CAREFULLY. BY USING THE WEBSITE, YOU INDICATE THAT YOU UNDERSTAND, AGREE AND CONSENT TO THIS TERMS OF USE. IF YOU DO NOT AGREE WITH THE TERMS OF THIS TERMS OF USE, PLEASE DO NOT USE THIS WEBSITE. </p>
+      <p>THIS TERMS OF USE   (“TERMS OF USE”) IS AN ELECTRONIC RECORD IN THE FORM OF AN ELECTRONIC CONTRACT FORMED UNDER INFORMATION TECHNOLOGY ACT, 2000 AND RULES MADE THEREUNDER AND THE AMENDED PROVISIONS PERTAINING TO ELECTRONIC DOCUMENTS / RECORDS IN VARIOUS STATUTES AS AMENDED BY THE INFORMATION TECHNOLOGY ACT, 2000. THE TERMS OF USE DOES NOT REQUIRE ANY PHYSICAL, ELECTRONIC OR DIGITAL SIGNATURE.</p>
+      <p>THE TERMS OF USE  IS A LEGALLY BINDING DOCUMENT BETWEEN USER AND BYEBUYING  (BOTH TERMS DEFINED BELOW). THE TERMS OF USE WILL BE EFFECTIVE UPON YOUR ACCEPTANCE OF THE SAME (DIRECTLY OR INDIRECTLY IN ELECTRONIC FORM OR BY MEANS OF AN ELECTRONIC RECORD) AND WILL GOVERN THE RELATIONSHIP BETWEEN USER AND BYEBUYING FOR THE USE OF THE WEBSITE (DEFINED BELOW).</p>
+      <p>PLEASE READ THIS TERMS OF USE CAREFULLY. BY USING THE WEBSITE, YOU INDICATE THAT YOU UNDERSTAND, AGREE AND CONSENT TO THIS TERMS OF USE. IF YOU DO NOT AGREE WITH THE TERMS OF THIS TERMS OF USE, PLEASE DO NOT USE THIS WEBSITE. </p>
     </div>
   </div>
   <div class="gap gap-small"></div>
