--- a/app/views/welcome/shared/_footer.html.erb
+++ b/app/views/welcome/shared/_footer.html.erb
@@ -36,7 +36,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <p class="copyright-text">Copyright &copy; <a href="/">ByeBuying</a> 2016. Designed my <a href="http://www.mysolutions4u.in/" target="_blank">MySolution4U.in</a>. All rights reserved
+        <p class="copyright-text">Copyright &copy; <a href="/">ByeBuying</a> 2016. All rights reserved
         <!--<p class="copyright-text">Copyright &copy; <a href="/">Barter</a> 2016. Designed my <a href="http://www.mysolutions4u.in/" target="_blank">MySolution4U.in</a>. All rights reserved-->
           <a href="/terms_condition">Terms & Condition</a>  | <a href="/privacy_policy">Privacy Policy</a></p>
       </div>
