product show page

--- a/app/assets/stylesheets/application/home.scss
+++ b/app/assets/stylesheets/application/home.scss
@@ -119,6 +119,9 @@
     }
   }
 }
+.box{
+  min-height: 508px;
+}
 /*---------------------------------------------------img-product-category-con---------------------------------------------------*/
 
 
