--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -124,7 +124,7 @@
                   <!--<input type="checkbox" name="negotiable" class="set-negotiable" > Negotiable-->
                   <%#= select_tag 'state', options_for_select(state_for_collection), prompt: 'select state', class: 'form-control set-state'%>
                 </div>
-                <input type="submit" class="btn btn-primary">
+                <input type="submit" class="btn btn-primary save-full-btn">
               </form>
             </div>
             <!--<span class="btn btn-primary filter-evnt"> filter </span>-->
