--- a/app/views/customer/products/show.html.erb
+++ b/app/views/customer/products/show.html.erb
@@ -2,163 +2,21 @@
   <div class="row">
     <div class="white-bg">
       <div class="col-sm-6 col-xs-12">
-        <div class="col-xs-6">
-          <div class="product-detail">
-            <h4>Name:</h4>
-            <p><%= @product.name %></p>
-          </div>
-        </div>
-        <div class="col-xs-6">
-          <div class="product-detail">
-            <h4>Status:</h4>
-            <p><%= @product.admin_verified? ? 'Approved' : 'Pending' %></p>
-          </div>
-        </div>
-        <div class="col-xs-12">
-          <div class="product-detail">
-            <h4>Category:</h4>
-            <p><%= @product.subcategory.category.name %></p>
-          </div>
-        </div>
-        <div class="col-xs-12">
-          <div class="product-detail">
-            <h4>Subcategory:</h4>
-            <p><%= @product.subcategory.name %></p>
-          </div>
-        </div>
-        <% if @product.name == 'Wedding Collection' %>
-            <div class="col-xs-12">
-              <div class="product-detail">
-                <h4>Gender:</h4>
-                <p><%= @product.gender %></p>
-              </div>
-            </div>
-        <% end %>
-        <div class="col-xs-12">
-          <div class="product-detail">
-            <h4>Description:</h4>
-            <p><%= @product.description %></p>
-          </div>
-        </div>
-        <div class="col-xs-12">
-          <div class="product-detail">
-            <h4>Technical Specification:</h4>
-            <p><%= @product.technical_specification %></p>
-          </div>
-        </div>
-        <div class="col-xs-12">
-          <div class="product-detail">
-            <h4>State:</h4>
-            <p><%= @product.state.name %></p>
-          </div>
-        </div>
-        <div class="col-xs-12">
-          <div class="product-detail">
-            <h4>City:</h4>
-            <p><%= @product.city.name %></p>
-          </div>
-        </div>
-        <div class="col-xs-12">
-          <div class="product-detail">
-            <h4>Location:</h4>
-            <p><%= @product.location %></p>
-          </div>
-        </div>
-        <div class="col-xs-12">
-          <div class="product-detail">
-            <h4>Start at:</h4>
-            <p><%= @product.start_at.strftime(time_format) %></p>
-          </div>
-        </div>
-        <div class="col-xs-12">
-          <div class="product-detail">
-            <h4>End at:</h4>
-            <p><%= @product.end_at.strftime(time_format) %></p>
-          </div>
-        </div>
-        <div class="col-xs-12">
-          <div class="product-detail">
-            <h4>Quantity:</h4>
-            <p><%= @product.quantity %></p>
-          </div>
-        </div>
-        <!--<div class="col-xs-12">-->
-          <!--<div class="product-detail">-->
-            <!--<h4>Rent:</h4>-->
-            <!--<p><%#= @product.rent %></p>-->
-          <!--</div>-->
-        <!--</div>-->
-        <!--<div class="col-xs-12">-->
-          <!--<div class="product-detail">-->
-            <!--<h4>Price in rupees:</h4>-->
-            <!--<p><%#= @product.price_in_rupees %></p>-->
-          <!--</div>-->
-        <!--</div>-->
-        <div class="col-sm-12">
-          <div class="product-detail">
-            <h4>Per Hour Price:</h4>
-            <p><%= @product.per_hour_price %></p>
-          </div>
-        </div>
-        <div class="col-sm-12">
-          <div class="product-detail">
-            <h4>Per Day Price:</h4>
-            <p><%= @product.per_day_price %></p>
-          </div>
-        </div>
-        <div class="col-sm-12">
-          <div class="product-detail">
-            <h4>Per Week Price:</h4>
-            <p><%= @product.per_week_price %></p>
-          </div>
-        </div>
-        <div class="col-sm-12">
-          <div class="product-detail">
-            <h4>Per Month Price:</h4>
-            <p><%= @product.per_month_price %></p>
-          </div>
-        </div>
-
-
-        <div class="col-xs-12">
-          <div class="product-detail">
-            <h4>Refundable security:</h4>
-            <p><%= @product.refundable_security %></p>
-          </div>
-        </div>
-        <div class="col-xs-12">
-          <div class="product-detail">
-            <h4>Cost of replacement:</h4>
-            <p><%= @product.cost_of_replacement %></p>
-          </div>
-        </div>
-        <div class="col-xs-12">
-          <div class="product-detail">
-            <h4>Youtube link:</h4>
-            <p><%= @product.youtube_link %></p>
-          </div>
-        </div>
-        <div class="col-xs-12">
-          <div class="product-detail">
-            <h4>Others:</h4>
-            <p><%= @product.other %></p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-xs-12">
         <div class="add-image-con">
           <div class="row">
             <div class="col-xs-12">
-              <% @product.product_images.each do |product_image| %>
-                <span class="img-con">
-                  <%= image_tag product_image.image.url(ProductImage::DEFAULT_SIZE), class: 'upload-img' %>
-                    <% if product_image.id.present? %>
-                      <%= link_to customer_product_product_image_path(@product, product_image), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' do %>
-                          <i class="fa fa-times cross-icon"></i>
+              <div class="img-overflow">
+                <% @product.product_images.each do |product_image| %>
+                    <span class="img-con">
+                      <%= image_tag product_image.image.url(ProductImage::DEFAULT_SIZE), class: 'upload-img' %>
+                      <% if product_image.id.present? %>
+                          <%= link_to customer_product_product_image_path(@product, product_image), method: :delete, data: { confirm: 'Are you sure?' }, class: 'text-danger' do %>
+                              <i class="fa fa-times cross-icon"></i>
+                          <%- end %>
                       <%- end %>
-                  <%- end %>
-                </span>
-              <%- end %>
+                    </span>
+                <%- end %>
+              </div>
             </div>
           </div>
           <% unless @product.product_images.count > 4 %>
@@ -167,6 +25,273 @@
                 <%= render partial: 'customer/product_images/form', locals: { product: @product, product_image: @product.product_images.new } %>
               </fieldset>
           <% end %>
+        </div>
+      </div>
+      <div class="col-sm-6 col-xs-12">
+        <div class="row">
+          <div class="col-xs-12">
+            <h2>DETAIL</h2>
+          </div>
+          <div class="col-xs-12">
+            <div class="product-detail">
+              <div class="row">
+                <div class="col-xs-5">
+                  <h4>Name:</h4>
+                </div>
+                <div class="col-xs-7">
+                  <p><%= @product.name %></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <% if @product.name == 'Wedding Collection' %>
+              <div class="col-xs-12">
+                <div class="product-detail">
+                  <div class="row">
+                    <div class="col-xs-5">
+                      <h4>Gender:</h4>
+                    </div>
+                    <div class="col-xs-7">
+                      <p><%= @product.gender %></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+          <% end %>
+          <div class="col-xs-12">
+            <div class="product-detail">
+              <div class="row">
+                <div class="col-xs-5">
+                  <h4>Status:</h4>
+                </div>
+                <div class="col-xs-7">
+                  <p><%= @product.admin_verified? ? 'Approved' : 'Pending' %></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <div class="product-detail">
+              <div class="row">
+                <div class="col-xs-5">
+                  <h4>Category:</h4>
+                </div>
+                <div class="col-xs-7">
+                  <p><%= @product.subcategory.category.name %></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <div class="product-detail">
+              <div class="row">
+                <div class="col-xs-5">
+                  <h4>Subcategory:</h4>
+                </div>
+                <div class="col-xs-7">
+                  <p><%= @product.subcategory.name %></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <div class="product-detail">
+              <div class="row">
+                <div class="col-xs-5">
+                  <h4>State:</h4>
+                </div>
+                <div class="col-xs-7">
+                  <p><%= @product.state.name %></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <div class="product-detail">
+              <div class="row">
+                <div class="col-xs-5">
+                  <h4>City:</h4>
+                </div>
+                <div class="col-xs-7">
+                  <p><%= @product.city.name %></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <div class="product-detail">
+              <div class="row">
+                <div class="col-xs-5">
+                  <h4>Location:</h4>
+                </div>
+                <div class="col-xs-7">
+                  <p><%= @product.location %></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <div class="product-detail">
+              <div class="row">
+                <div class="col-xs-5">
+                  <h4>Start at:</h4>
+                </div>
+                <div class="col-xs-7">
+                  <p><%= @product.start_at.strftime(time_format) %></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <div class="product-detail">
+              <div class="row">
+                <div class="col-xs-5">
+                  <h4>End at:</h4>
+                </div>
+                <div class="col-xs-7">
+                  <p><%= @product.end_at.strftime(time_format) %></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <div class="product-detail">
+              <div class="row">
+                <div class="col-xs-5">
+                  <h4>Quantity:</h4>
+                </div>
+                <div class="col-xs-7">
+                  <p><%= @product.quantity %></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <h2>Cost</h2>
+          </div>
+          <div class="col-sm-12">
+            <div class="product-detail">
+              <div class="row">
+                <div class="col-xs-5">
+                  <h4>Per Hour Price:</h4>
+                </div>
+                <div class="col-xs-7">
+                  <p><%= @product.per_hour_price %></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12">
+            <div class="product-detail">
+              <div class="row">
+                <div class="col-xs-5">
+                  <h4>Per Day Price:</h4>
+                </div>
+                <div class="col-xs-7">
+                  <p><%= @product.per_day_price %></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12">
+            <div class="product-detail">
+              <div class="row">
+                <div class="col-xs-5">
+                  <h4>Per Week Price:</h4>
+                </div>
+                <div class="col-xs-7">
+                  <p><%= @product.per_week_price %></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-12">
+            <div class="product-detail">
+              <div class="row">
+                <div class="col-xs-5">
+                  <h4>Per Month Price:</h4>
+                </div>
+                <div class="col-xs-7">
+                  <p><%= @product.per_month_price %></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <div class="product-detail">
+              <div class="row">
+                <div class="col-xs-5">
+                  <h4>Refundable security:</h4>
+                </div>
+                <div class="col-xs-7">
+                  <p><%= @product.refundable_security %></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <div class="product-detail">
+              <div class="row">
+                <div class="col-xs-5">
+                  <h4>Cost of replacement:</h4>
+                </div>
+                <div class="col-xs-7">
+                  <p><%= @product.cost_of_replacement %></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <h2>Ohters</h2>
+          </div>
+          <div class="col-xs-12">
+            <div class="product-detail">
+              <h4>Description:</h4>
+              <p><%= @product.description %></p>
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <div class="product-detail">
+              <h4>Technical Specification:</h4>
+              <p><%= @product.technical_specification %></p>
+            </div>
+          </div>
+
+
+
+
+
+
+          <!--<div class="col-xs-12">-->
+          <!--<div class="product-detail">-->
+          <!--<h4>Rent:</h4>-->
+          <!--<p><%#= @product.rent %></p>-->
+          <!--</div>-->
+          <!--</div>-->
+          <!--<div class="col-xs-12">-->
+          <!--<div class="product-detail">-->
+          <!--<h4>Price in rupees:</h4>-->
+          <!--<p><%#= @product.price_in_rupees %></p>-->
+          <!--</div>-->
+          <!--</div>-->
+
+
+
+
+
+
+          <div class="col-xs-12">
+            <div class="product-detail">
+              <h4>Youtube link:</h4>
+              <p><%= @product.youtube_link %></p>
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <div class="product-detail">
+              <h4>Others:</h4>
+              <p><%= @product.other %></p>
+            </div>
+          </div>
         </div>
       </div>
       <div class="clearfix"></div>
