--- a/app/assets/stylesheets/customer/style.scss
+++ b/app/assets/stylesheets/customer/style.scss
@@ -236,12 +236,82 @@
   .white-bg{
     background-color: #ffffff;
     border-radius: 5px;
+    position: relative;
+    margin-bottom: 5px;
     h2{
       font-size: 20px;
       color: #000;
       font-weight: bold;
       width: 100%;
       padding-top: 30px;
+    }
+    h2.heading{
+      margin: 0;
+    }
+    p.description{
+      font-size: 13px;
+      color: #222222;
+    }
+    h5.time-option{
+      font-size: 12px;
+      color: #989898;
+      font-weight: normal;
+    }
+    .dropdown-main{
+      position: absolute;
+      top: 5px;
+      right: 5px;
+      .sort-arrow{
+        width: 20px;
+        height: 20px;
+        display: inline-block;
+        text-align: center;
+        float: right;
+        cursor: pointer;
+        background-color: #ffffff;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        border-radius: 50%;
+        -webkit-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
+        -moz-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
+        box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
+      }
+      ul.dropdown-option{
+        padding: 0;
+        width: 100px;
+        background-color: #f2f2f2;
+        position: relative;
+        margin-top: 10px;
+        display: none;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
+        span.arrow-top{
+          display: inline-block;
+          width: 0;
+          height: 0;
+          position: absolute;
+          top: -7px;
+          right: 4px;
+          border-left: 7px solid transparent;
+          border-right: 7px solid transparent;
+          border-bottom: 7px solid #f2f2f2;
+        }
+        li{
+          width: 100%;
+          border-bottom: 1px solid #dddddd;
+          padding: 5px 0;
+          list-style: none;
+          text-align: center;
+          a{
+            color: #555555;
+            font-size: 13px;
+          }
+        }
+        li.no_border{
+          border-bottom: none;
+        }
+      }
     }
     .product-detail{
       width: 100%;
