flash massege time limit

--- a/app/views/customer/shared/_header.html.erb
+++ b/app/views/customer/shared/_header.html.erb
@@ -175,3 +175,11 @@
 </div>
 <div class="header-space"></div>
 
+
+<script type="text/javascript" charset="utf-8">
+    $( document ).ready(function() {
+        setTimeout(function(){
+            $('.alert').remove();
+        }, 6000);
+    });
+</script>
